fix topbar menu not showing,add onclick to store list img to shoe products , added date to processing list print page

--- a/src/dashboard/components/topbar/topbar.css
+++ b/src/dashboard/components/topbar/topbar.css
@@ -52,5 +52,5 @@
 }
 .topbarLink{
  text-decoration: none;
- color: none;
+ color: #000;
 }
