--- a/src/dashboard/pages/storeList/storeList.css
+++ b/src/dashboard/pages/storeList/storeList.css
@@ -37,6 +37,7 @@
     border-radius: 50%;
     object-fit: cover;
     margin-right: 10px;
+    cursor: pointer;
 }
 .storelistEdit{
     border:none;
